--- a/MvvmTools.Views/Views/ScaffoldDialog.xaml
+++ b/MvvmTools.Views/Views/ScaffoldDialog.xaml
@@ -3,10 +3,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:models="clr-namespace:MvvmTools.Core.Models"
              xmlns:viewModels="clr-namespace:MvvmTools.Core.ViewModels"
              xmlns:views="clr-namespace:MvvmTools.Core.Views"
-             Width="450"
-             Height="300"
              d:DataContext="{d:DesignInstance viewModels:ScaffoldDialogViewModel}"
              mc:Ignorable="d">
     <UserControl.Resources>
@@ -15,142 +14,156 @@
                 <ResourceDictionary Source="../Styles/GroupBox.xaml" />
                 <ResourceDictionary Source="../Converters/Converters.xaml" />
                 <ResourceDictionary Source="../Styles/Validation.xaml" />
-                <ResourceDictionary Source="../Styles/Misc.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </UserControl.Resources>
 
-    <Grid Margin="10">
+    <Grid Width="700" Margin="10">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
             <RowDefinition />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
-        <TabControl Grid.Row="1"
-                    BorderThickness="0"
-                    TabStripPlacement="Bottom">
-            <TabItem Header="Basic Information">
-                <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto" />
-                        <RowDefinition Height="Auto" />
-                        <RowDefinition Height="Auto" />
-                        <RowDefinition />
-                    </Grid.RowDefinitions>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="Auto" />
-                        <ColumnDefinition />
-                    </Grid.ColumnDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="Auto" />
+            <ColumnDefinition />
+        </Grid.ColumnDefinitions>
 
-                    <!--  Row 0: Prefix  -->
-                    <TextBlock Grid.Row="0"
-                               Grid.Column="0"
-                               Margin="0,0,5,0"
-                               VerticalAlignment="Center"
-                               Text="Name (w/o suffix):" />
-                    <TextBox Grid.Row="2"
-                             Grid.Column="1"
-                             Margin="0,5,0,0"
-                             VerticalAlignment="Center"
-                             Text="{Binding ViewModelSuffix,
-                                            Mode=TwoWay,
-                                            UpdateSourceTrigger=PropertyChanged,
-                                            ValidatesOnDataErrors=True,
-                                            NotifyOnValidationError=True}" />
+        <!--  Row 0: Name  -->
+        <TextBlock Grid.Row="0"
+                   Grid.Column="0"
+                   Margin="0,0,5,0"
+                   VerticalAlignment="Center"
+                   Text="New Item:" />
+        <TextBox Grid.Row="0"
+                 Grid.Column="1"
+                 Margin="0,5,0,0"
+                 VerticalAlignment="Center"
+                 Text="{Binding Name,
+                                Mode=TwoWay,
+                                UpdateSourceTrigger=PropertyChanged,
+                                ValidatesOnDataErrors=True,
+                                NotifyOnValidationError=True}" />
 
-                    <!--  Row 1: View Model Suffix  -->
-                    <TextBlock Grid.Row="1"
-                               Grid.Column="0"
-                               Margin="0,5,5,0"
-                               VerticalAlignment="Center"
-                               Text="View Model Suffix:" />
-                    <TextBox Grid.Row="1"
-                             Grid.Column="1"
-                             Margin="0,5,0,0"
-                             VerticalAlignment="Center"
-                             Text="{Binding ViewModelSuffix,
-                                            Mode=TwoWay,
-                                            UpdateSourceTrigger=PropertyChanged,
-                                            ValidatesOnDataErrors=True,
-                                            NotifyOnValidationError=True}" />
+        <!--  Row 2: View Suffix  -->
+        <TextBlock Grid.Row="1"
+                   Grid.Column="0"
+                   Margin="0,22,5,0"
+                   VerticalAlignment="Center"
+                   Text="View Type:" />
+        <ComboBox Grid.Row="1"
+                  Grid.Column="1"
+                  Margin="0,22,0,0"
+                  VerticalAlignment="Center"
+                  ItemsSource="{Binding ViewSuffixes}"
+                  SelectedItem="{Binding SelectedViewSuffix,
+                                         UpdateSourceTrigger=PropertyChanged,
+                                         ValidatesOnDataErrors=True,
+                                         NotifyOnValidationError=True}" />
 
-                    <!--  Row 2: View Suffix  -->
-                    <TextBlock Grid.Row="2"
-                               Grid.Column="0"
-                               Margin="0,5,5,0"
-                               VerticalAlignment="Center"
-                               Text="View Type:" />
-                    <ComboBox Grid.Row="2"
-                              Grid.Column="1"
-                              Margin="0,5,0,0"
-                              VerticalAlignment="Center"
-                              ItemsSource="{Binding ViewSuffixes}"
-                              SelectedItem="{Binding SelectedViewSuffix}" />
-                </Grid>
-            </TabItem>
-            <TabItem Header="Settings Project">
-                <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="Auto" />
-                        <ColumnDefinition Width="Auto" />
-                    </Grid.ColumnDefinitions>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto" />
-                        <RowDefinition Height="Auto" />
-                        <RowDefinition Height="Auto" />
-                        <RowDefinition Height="Auto" />
-                    </Grid.RowDefinitions>
+        <TextBlock Grid.Row="2"
+                   Grid.Column="0"
+                   Grid.ColumnSpan="2"
+                   Margin="0,20,0,0"
+                   VerticalAlignment="Center"
+                   Text="Use Settings for Project" />
+        <ComboBox Grid.Row="3"
+                  Grid.Column="0"
+                  Grid.ColumnSpan="2"
+                  Margin="0,1,0,0"
+                  HorizontalContentAlignment="Stretch"
+                  ItemsSource="{Binding Projects,
+                                        Mode=TwoWay}"
+                  SelectedItem="{Binding SettingsProject,
+                                         Mode=TwoWay}">
 
-                    <TextBlock Margin="0,0,4,0"
-                               VerticalAlignment="Center"
-                               Text="Use Settings for Project" />
-                    <ComboBox Grid.Row="1"
-                              Grid.Column="0"
-                              Grid.ColumnSpan="2"
-                              Margin="0,5,0,0"
-                              HorizontalContentAlignment="Stretch"
-                              ItemTemplate="{StaticResource ProjectModelComboBoxKey}"
-                              ItemsSource="{Binding Projects,
-                                                    Mode=TwoWay}"
-                              SelectedItem="{Binding SettingsProject,
-                                                     Mode=TwoWay}" />
+            <ComboBox.ItemTemplate>
+                <DataTemplate DataType="models:ProjectOptions">
+                    <DockPanel>
+                        <TextBlock Margin="4,3"
+                                   HorizontalAlignment="Left"
+                                   VerticalAlignment="Center"
+                                   DockPanel.Dock="Right"
+                                   Text="{Binding ProjectModel.TypeDescription}" />
+                        <TextBlock Margin="4,3"
+                                   HorizontalAlignment="Left"
+                                   VerticalAlignment="Center"
+                                   DockPanel.Dock="Left"
+                                   FontWeight="SemiBold"
+                                   Text="{Binding ProjectModel.Name}" />
+                    </DockPanel>
+                </DataTemplate>
+            </ComboBox.ItemTemplate>
+        </ComboBox>
 
-                    <!--  View Model  -->
-                    <GroupBox Grid.Row="2"
-                              Grid.Column="0"
-                              Margin="0,0,2,0"
-                              BorderBrush="{StaticResource GroupLvl2AccentBrush}"
-                              Header="View Model Location">
-                        <views:LocationDescriptorUserControl DataContext="{Binding LocationDescriptorForViewModel}" />
-                    </GroupBox>
+        <!--  Row 4: View Model Suffix  -->
+        <TextBlock Grid.Row="4"
+                   Grid.Column="0"
+                   Margin="0,18,5,0"
+                   VerticalAlignment="Center"
+                   Text="View Model Suffix:" />
+        <TextBox Grid.Row="4"
+                 Grid.Column="1"
+                 Margin="0,18,0,0"
+                 VerticalAlignment="Center"
+                 Text="{Binding ViewModelSuffix,
+                                Mode=TwoWay,
+                                UpdateSourceTrigger=PropertyChanged,
+                                ValidatesOnDataErrors=True,
+                                NotifyOnValidationError=True}" />
 
-                    <!--  View  -->
-                    <GroupBox Grid.Row="3"
-                              Grid.Column="1"
-                              Margin="2,0,0,0"
-                              BorderBrush="{StaticResource GroupLvl2AccentBrush}"
-                              Header="View Location">
-                        <views:LocationDescriptorUserControl DataContext="{Binding LocationDescriptorForView}" />
-                    </GroupBox>
-                </Grid>
+        <Grid Grid.Row="5"
+              Grid.Column="0"
+              Grid.ColumnSpan="2"
+              Margin="0,15,0,0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition />
+                <ColumnDefinition />
+            </Grid.ColumnDefinitions>
 
-            </TabItem>
-        </TabControl>
+            <!--  View Model  -->
+            <GroupBox Grid.Column="0"
+                      Margin="0,0,2,0"
+                      BorderBrush="{StaticResource GroupLvl2AccentBrush}"
+                      Header="View Model Location">
+                <views:LocationScaffoldUserControl DataContext="{Binding LocationForViewModel}" />
+            </GroupBox>
+
+            <!--  View  -->
+            <GroupBox Grid.Column="1"
+                      Margin="2,0,0,0"
+                      BorderBrush="{StaticResource GroupLvl2AccentBrush}"
+                      Header="View Location">
+                <views:LocationScaffoldUserControl DataContext="{Binding LocationForView}" />
+            </GroupBox>
+        </Grid>
 
         <!--  Back, Next, and Cancel  -->
-        <Rectangle Grid.Row="2"
+        <!--<Rectangle Grid.Row="7"
+                   Grid.Column="0"
+                   Grid.ColumnSpan="2"
                    Height="1"
+                   Margin="0,5,0,0"
                    Stroke="Black" />
-        <Rectangle Grid.Row="3"
+        <Rectangle Grid.Row="8"
+                   Grid.Column="0"
+                   Grid.ColumnSpan="2"
                    Height="2"
-                   Stroke="Silver" />
-        <StackPanel Grid.Row="4"
-                    VerticalAlignment="Bottom"
+                   Stroke="Silver" />-->
+        <StackPanel Grid.Row="9"
+                    Grid.Column="0"
+                    Grid.ColumnSpan="2"
                     Margin="0,10,0,0"
                     HorizontalAlignment="Right"
+                    VerticalAlignment="Bottom"
                     Orientation="Horizontal">
             <Button Content="Back" Padding="5,3" />
             <Button Margin="5,0,0,0"
